public/common/global.css
:root {
    --primary-bg: #f5f5f5;
    --page-bg: #1f1f1f;
    --card-bg: #ffffff;
    --primary-fg: #3a3434;
    --secondary-fg: #919191;
    --sidebar-fg: #ffffff;
    --sidebar-bg: #3a3434aa;
    --border-light: #afa7a1;
    --border-dark: #6e6a67;
    --accent-light: #e7b861;
    --accent-medium: #a26b04;
    --sunlight: #ffa60066;
    --accent-dark: #503116;
    --error-light: #df7362;
    --error-dark: #4c2923;
    --overlay-bg: #1f1f1fee;

    --login-border: #686868aa;
    --login-bg: #1f1f1fee;
    --login-field-bg: #3B383388;
    --login-field-fg: #989898;
    --login-hover-bg: #3b3b3bee;
    --success-light: #54c66d;

    --circle-radius: 50%;
    --button-radius: 96px;
    --container-radius: 48px;
    --card-radius: 24px;
    --input-field-radius: 8px;

    --card-shadow: 0px 0px 4px #00000011;

    --small-gap: 0.5rem;
    --medium-gap: 1rem;
    --big-gap: 2rem;
    
    --container-padding: 1.5rem 2.5rem;
    --card-padding: 1.25rem 2rem;
    --sidebar-padding: 1.5rem;

    --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --icon-size: 1.2rem;
}

body {
    background-color: var(--page-bg);
    color: var(--primary-fg);
    font-family: var(--main-font);
    margin: var(--small-gap);
    display: flex;
    gap: var(--small-gap);
}

a {
    text-decoration: none;
}

.global-sidebar {
    background-color: var(--sidebar-bg);
    color: var(--sidebar-fg);
    flex: 30%;
    min-width: 280px;
    height: calc(100vh - var(--medium-gap));
    box-sizing: border-box;
    border-radius: var(--container-radius);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: var(--sidebar-padding);
    overflow-y: scroll;
}

.mobile-top-bar {
    display: none;
}

.sunlight {
    position: fixed;
    left: -8rem;
    width: 16rem;
    aspect-ratio: 1;
    background-color: var(--sunlight);
    filter: blur(52px);
    border-radius: var(--circle-radius);
    z-index: -5;
    pointer-events: none;
}

.logo {
    display: flex;
    align-items: center;
    gap: var(--medium-gap);
}

.logo-image {
    width: 5rem;
    height: 2rem;
    padding: var(--medium-gap);
    box-sizing: border-box;
    background-color: var(--sidebar-fg);
    border-radius: var(--button-radius);
}

.container {
    border-radius: var(--container-radius);
    padding: var(--container-padding);
    box-sizing: border-box;
}

.header {
    font-family: var(--main-font);
    letter-spacing: 4px;
    text-transform: uppercase;
    font-size: larger;
}

.image {
    background-color: var(--card-bg);
    border-radius: var(--circle-radius);
}

.nav-link-section {
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);
    list-style: none;
    padding-left: 0;
}​

.nav-link-wrapper {
    text-decoration: none;
}

.nav-link {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: var(--medium-gap);
    list-style-type: none;
    border-radius: var(--button-radius);
    padding: var(--medium-gap);
    font-size: 0.9rem;
}

.nav-link i, .nav-link p {
    color: var(--sidebar-fg);
    margin: 0;
}

.nav-link i {
    font-size: var(--icon-size);
}

.link-name {
    display: flex;
    align-items: center;
    gap: var(--small-gap);
}

.nav-link:hover > .link-name > *,
.nav-link:hover > *,
.nav-link:hover > .link-name > .profile-info p {
    color: var(--accent-light);
}

.nav-link:active > .link-name > *,
.nav-link:active > *,
.nav-link:active > .link-name > .profile-info p {
    color: var(--accent-dark);
}

#active-link {
    background-color: var(--accent-light);
}

#active-link * {
    color: var(--accent-dark);
}

.nav-link:hover > *, .nav-link:hover > .profile-info p {
    color: var(--accent-light);
}

.nav-link:active > *, .nav-link:active > .profile-info p {
    color: var(--accent-dark);
}

.profile-picture {
    width: 2rem;
    height: 2rem;
}

.username {
    font-weight: 500;
}

.user-role {
    font-weight: 100;
}

.accounts-page-link {
    display: flex;
}

.main-content {
    width: 100%;
    height: calc(100vh - var(--medium-gap));
    background-color: var(--primary-bg);
    overflow-y: auto;
    position: relative;
}

.event-box {
    box-sizing: border-box;
    display: grid;
    grid-auto-flow: row;
    grid-row-gap: var(--medium-gap);
    width: 100%;
    background-color: #FFFFFF;
    padding: 30px;
    border-radius: 24px;
    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
    transition: all 0.5s ease;
    overflow: hidden;
    cursor: pointer;
    position: relative;
}

.event-box-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#event-name {
    font-size: 1.1rem;
    float: left;
    font-weight: 500;
}

#client-name {
    font-size: 0.9rem;
    float: right;
}

#details-top-box {
    font-size: 1.5rem;
}

.event-box-bottom {
    gap: var(--medium-gap);
}

.event-box-bottom > div {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

#details-box {
    display: flex;
    flex-direction: column;
    gap: var(--medium-gap);
    margin-bottom: 1rem;
}

#date-loc span {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

#contact span {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

#description-span span {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.event-box-bottom span {
    display: inline-block;
    margin-bottom: var(--small-gap);
    font-size: 0.8rem;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
            line-clamp: 2;
    -webkit-box-orient: vertical;
}

.notif-controls {
    width: 100%;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    font-size: 0.8rem;
}

.back-button {
    box-sizing: border-box;
    width: fit-content;
    background: none;
    border: none;
    padding: 0rem 1rem;
}

.back-button-wrapper {
    color: var(--primary-fg);
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--small-gap);
    list-style-type: none;
    font-size: 1rem;
    font-family: var(--main-font);
}

.upcoming-events-container {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: var(--medium-gap);
}

.button {
    box-sizing: border-box;
    border-radius: var(--button-radius);
    padding: 0rem 1rem;
}

.button-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--small-gap);
    list-style-type: none;
    font-size: 0.8rem;
    font-family: var(--main-font);
}

.button-wrapper i {
    font-size: var(--icon-size);
}

.fg-button {
    border: 1px solid var(--primary-fg);
    background-color: var(--primary-fg);
    color: var(--primary-bg);
}

.fg-button:hover {
    background: none;
    border-color: var(--accent-light);
    background-color: var(--accent-light);
}

.fg-button:hover .fg-button-wrapper {
    color: var(--accent-dark);
}

.fg-button-wrapper {
    color: var(--primary-bg);
}

.bg-button {
    background: none;
    border: 1px solid var(--primary-fg);
}

.bg-button:hover {
    border: 1px solid var(--accent-medium);
}

.bg-button:hover .bg-button-wrapper {
    color: var(--accent-medium);
}

.bg-button-wrapper {
    color: var(--primary-fg);
}

.focus-button {
    background-color: var(--primary-fg);
    color: var(--primary-bg);
}

.top-page-bar {
    display: flex;
    align-items: left;
    gap: var(--medium-gap);
}

.search-bar {
    display: flex;
    align-items: center;
    width: 40%;
    background-color: var(--primary-bg);
    border-radius: var(--container-radius);
    border-style: solid;
    border-width: 0.1rem;
    border-color: var(--border-light);
    padding: 0.4rem 1rem;
    gap: var(--small-gap);
}

.search-bar input {
    background: transparent;
    flex: 1;
    border: 0;
    outline: none;
    font-family: var(--main-font);
    font-size: 0.8rem;
    color: var(--primary-fg);
    padding: 0.3rem 0;
}

.search-bar::placeholder {
    color: var(--border-light);
}

.search-bar button {
    background: transparent;
    border: 0;
    outline: none;
    color: var(--border-light);
    font-size: 1.5rem;
    margin: 0;
    display: flex;
    align-items: center;
    cursor: pointer;
}

#status[data-status="planning"] {
    color: var(--accent-light);
}

#status[data-status="in progress"] {
    color: var(--accent-light);
}

#status[data-status="cancelled"] {
    color: var(--error-light);
}

#status[data-status="postponed"] {
    color: var(--accent-dark);
}

#status[data-status="completed"] {
    color: var(--success-light);
}

@media screen and (max-width: 800px) {
    * {
        --icon-size: 1.5rem;
        --top-bar-height: 3rem;
    }
    
    body {
        flex-direction: column;
    }
    
    .main-content {
        height: calc(100vh - (1.5 * var(--medium-gap)) - var(--top-bar-height));
    }
    
    .global-sidebar {
        position: absolute;
        top: calc(var(--top-bar-height) + (2 * var(--small-gap)));
        z-index: 1000;
        width: calc(100vw - (2 * var(--small-gap)));
        height: calc(100vh - (1.5 * var(--top-bar-height)));
        margin: 0;
        opacity: 0;
        transform: scale(0.98);
        pointer-events: none;
        backdrop-filter: blur(20px);

        transition: opacity 0.25s, transform 0.15s;
    }

    .mobile-top-bar {
        width: 100%;
        height: var(--top-bar-height);
        display: flex;
        justify-content: space-between;
    }

    .mobile-top-bar-button {
        background-color: transparent;
        border: none;
        color: var(--primary-bg);
        font-family: var(--main-font);
        cursor: pointer;
    }

    .mobile-top-bar-button i {
        font-size: var(--icon-size);
    }
}

